--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17",
-      "pg": "^8.4.0"
+      "typeorm-naming-strategies": "^4.1.0"
    },
    "devDependencies": {
-      "ts-node": "10.7.0",
       "@types/node": "^16.11.10",
+      "ts-node": "10.7.0",
       "typescript": "4.5.2"
    }
 }
